--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ python = ">=3.9.0,<3.13"
 
 [tool.poetry.group.dev.dependencies]
 
+[tool.poetry-dynamic-versioning]
+enable = true
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
+build-backend = "poetry_dynamic_versioning.backend"
